
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 DEC 18a
  * in cycle/*/cycle.c
    - in runtime_actions_cycle_specific(), added gl->PRECONDITIONER!=PRECON_LOCALTIMESTEP2
  * in cycle/share/cycle_share.c
    - in add_constants_to_codex(), added PRECON_LOCALTIMESTEP2
    - added find_Delta_Lambda_for_dtau_local()
    - in find_dtau(), renamed find_Delta_Lambda_for_dtau() for find_Delta_Lambda_for_dtau_local()
  * in model/share/fluid_share.c
    - in find_Gamma(), added PRECON_LOCALTIMESTEP2
  * in bin/thermal_sheath.wrp
    - made modifications -> now can use CFL of 1 till Mach 25 when a sheath exists (the CFL used
      to be restricted to 0.01 or less when the Mach number was more than 16 and a sheath was 
      present)
      

2019 DEC 09a
  * in src/data.c
    - in find_interpolation_weight(), made changes to how thisweight is computed (now
      avoids a situation where a interpolated node could be given no value)
      

2019 DEC 06a
  * renamed filter_Fstar_interface_positivity_preserving() 
    to filter_Fstar_interface_positivity_preserving_PARENT()
  * in cycle/resconv/_MUSCL/resconv.c
    - added POSFILTER_TEST
  * in cycle/share/res_share.c
    - added filter_Fstar_interface_positivity_preserving_TEST()
  * in bin
    - added qmag.eqn
    - modified thermal_sheath.wrp
  * in tools
    - added thermionic.c
    - added soap.c
  * in lib/exm/exm.c
    - added function process_flag_double()
        

2019 NOV 28a
  * in model/fluid/_*_plasma/fluid_source.c 
    - in function find_Se(), changed S[fluxee] so that it is not function of the electron
      pressure gradient 
  * in model/fluid/doc/Transport_Equations/report.tex
    - in the section "Electron Energy Loss Function" added text explaining why it may be