@@ -3,10 +3,10 @@ echo "Removing proprietary directory .././model/chem/_Air_Plasma_8s_28r_Macheret
 rm -rf .././model/chem/_Air_Plasma_8s_28r_Macheret 
 cp -a _proprietary .././model/chem/_Air_Plasma_8s_28r_Macheret 
 ( printf "current Air_Plasma_8s_28r_Macheret\nEND" ) > .././model/chem/_Air_Plasma_8s_28r_Macheret/.config 
-echo "Removing proprietary directory .././model/chem/_Air_Plasma_12s_59r_Dunn-Kang-Macheret"
-rm -rf .././model/chem/_Air_Plasma_12s_59r_Dunn-Kang-Macheret 
-cp -a _proprietary .././model/chem/_Air_Plasma_12s_59r_Dunn-Kang-Macheret 
-( printf "current Air_Plasma_12s_59r_Dunn-Kang-Macheret\nEND" ) > .././model/chem/_Air_Plasma_12s_59r_Dunn-Kang-Macheret/.config 
+echo "Removing proprietary directory .././model/chem/_Air_Plasma_12s_42r_Dunn-Kang-Macheret"
+rm -rf .././model/chem/_Air_Plasma_12s_42r_Dunn-Kang-Macheret 
+cp -a _proprietary .././model/chem/_Air_Plasma_12s_42r_Dunn-Kang-Macheret 
+( printf "current Air_Plasma_12s_42r_Dunn-Kang-Macheret\nEND" ) > .././model/chem/_Air_Plasma_12s_42r_Dunn-Kang-Macheret/.config 
 echo "Removing proprietary directory .././model/chem/_H2_Air_Plasma_14s_47r_Jachimowsky-Macheret"
 rm -rf .././model/chem/_H2_Air_Plasma_14s_47r_Jachimowsky-Macheret 
 cp -a _proprietary .././model/chem/_H2_Air_Plasma_14s_47r_Jachimowsky-Macheret 
