@@ -5,7 +5,7 @@ option   Air_2s_0r
 option   Air_4s_13r
 option   Air_Plasma_6s_15r
 optionP   Air_Plasma_8s_28r_Macheret
-optionP   Air_Plasma_12s_59r_Dunn-Kang-Macheret
+optionP   Air_Plasma_12s_42r_Dunn-Kang-Macheret
 option   Air_Plasma_11s_31r_Dunn-Kang
 option   N2_Plasma_3s_3r
 option   He_Air_3s_0r
